<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_todo"
            android:title="@string/menu_todo" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_bin" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_setting" />
    </group>
</menu>